# competitive-programming

./: CMakeLists.txt  README.md  Scratch.cpp  debug.cpp  input.txt  output.txt
2015_Dec/Silver/: 3-BreedCounting.cpp
2016_Feb/Silver/: 1-CircularBarn.cpp  2-LoadBalancing.cpp
2016_Jan/Silver/: 1-AngryCows.cpp  3-BuildGates.cpp
2017_Dec/Silver/: 1-MyCowAteMyHomework.cpp  2-MilkMeasurement.cpp  3-TheBovineShuffle.cpp  Problem1.cpp
2017_Feb/Silver/: 1-WhyDidTheCowCrossTheRoad.cpp  3-WhyDidTheCowCrossTheRoad-III.cpp
2017_Jan/Silver/: 1-CowDanceShow.cpp  3-SecretCowCode.cpp
2018_Dec/Silver/: 2-Convention-II.cpp
2018_Feb/Silver/: 3-Teleportation.cpp  RestStops.cpp
2018_Jan/Silver/: 3-MooTube.cpp  Problem1.cpp
2019_Dec/Silver/: 1-MooBuzz.cpp
2019_Jan/Silver/: 1-GrassPlanting.cpp
2020_Dec/Bronze/: 3-StuckInARut.cpp
2020_Dec/Silver/: 1-Cowntagion.cpp  2-RectangularPasture.cpp
2020_Feb/Silver/: 1-SwapitySwapitySwap.cpp  3-ClockTree.cpp
2020_Jan/Silver/: 2-LoanRepayment.cpp
A2OJ/1300/: 1-YoungPhysicist.cpp  10-StonesOnTheTable.cpp  2-BeautifulMatrix.cpp  3-QueueAtTheSchool.cpp  4-Borze.cpp  6-LightsOut.cpp  7-Word.cpp  8-WordCapitalization.cpp  Airport.cpp  AmusingJoke.cpp  ArrivalOfTheGeneral.cpp  BeautifulYear.cpp  BicycleChain.cpp  BigSegment.cpp  Bit++.cpp  BoyOrGirl.cpp  BoysAndGirls.cpp  BusinessTrip.cpp  CardsWithNumbers.cpp  ChatRoom.cpp  ComparingStrings.cpp  Cupboards.cpp  DZYLovesChessboard.cpp  DimaAndFriends.cpp  Domino.cpp  Dragons.cpp  Drinks.cpp  Dubstep.cpp  EasyNumberChallenge.cpp  EffectiveApproach.cpp  EvenOdds.cpp  Fence.cpp  Football-II.cpp  Football.cpp  HQ9+.cpp  HelpfulMaths.cpp  HexadecimalsTheorem.cpp  HungrySequence.cpp  I_Love_%username%.cpp  IncreaseAndDecrease.cpp  (+45 more)
CSES/1-IntroductoryProblems/: 10-TrailingZeros.cpp  12-PalindromeReorder.cpp  13-CreatingStrings-I.cpp  4-IncreasingArray.cpp  5-Permutations.cpp  6-NumberSpiral.cpp  7-TwoKnights.cpp  AppleDivision.cpp  BitStrings.cpp  ChessboardAndQueens.cpp  CoinPiles.cpp  DigitQueries.cpp  GrayCode.cpp  GridPaths.cpp  MissingNumber.cpp  Repetitions.cpp  TowerOfHanoi.cpp  TwoSets.cpp  WeirdAlgorithm.cpp
CSES/11-AdditionalProblems/: NewFlightRoutes.cpp  StickDivision.cpp
CSES/2-SortingAndSearching/: 12-TrafficLights.cpp  15-TasksAndDeadlines.cpp  17-SumOfThreeValues.cpp  2-Apartments.cpp  20-SubarraySums-I.cpp  21-SubarraySums-II.cpp  23-ArrayDivision.cpp  26-MovieFestival-II.cpp  5-RestaurantCustomers.cpp  8-MaximumSubarray.cpp  9-StickLengths.cpp  Apartments.cpp  CollectingNumbers-II.cpp  CollectingNumbers.cpp  ConcertTickets.cpp  DistinctNumbers.cpp  FactoryMachines.cpp  FerrisWheel.cpp  JosephusProblem-II.cpp  JosephusProblem.cpp  MaximumSubarraySum-II.cpp  MissingCoinSum.cpp  MovieFestival-II.cpp  MovieFestival.cpp  NearestSmallerValues.cpp  NestedRangesCheck.cpp  NestedRangesCount.cpp  Playlist.cpp  ReadingBooks.cpp  RoomAllocation.cpp  SlidingCost.cpp  SlidingMedian.cpp  SubarrayDistinctValues.cpp  SubarrayDivisibility.cpp  SumOfTwoValues.cpp  Towers.cpp  TrafficLights.cpp
CSES/3-DynamicProgramming/: 10-RectangleCutting.cpp  12-RemovalGame.cpp  14-IncreasingSubsequence.cpp  15-Projects.cpp  3-CoinCombinations-I.cpp  5-RemovingDigits.cpp  7-BookShop.cpp  ArrayDescription.cpp  BookShop.cpp  CoinCombinations-II.cpp  CountingTowers.cpp  DiceCombinations.cpp  EditDistance.cpp  ElevatorRides.cpp  GridPaths.cpp  MinimizingCoins.cpp  MoneySums.cpp  Projects.cpp  TwoSets-II.cpp
CSES/4-GraphAlgorithms/: 11-FlightDiscount.cpp  2-Labyrinth.cpp  3-BuildingRoads.cpp  5-BuildingTeams.cpp  6-RoundTrip.cpp  7-Monsters.cpp  CountingRooms.cpp  CourseSchedule.cpp  CycleFinding.cpp  FlightDiscount.cpp  FlightRoutesCheck.cpp  GameRoutes.cpp  HighScore.cpp  Investigation.cpp  LongestFlightRoute.cpp  MessageRoute.cpp  PlanetsAndKingdoms.cpp  PlanetsCycles.cpp  PlanetsQueries.cpp  RoadConstruction.cpp  RoadReparation.cpp  RoundTrip-II.cpp  RoundTrip.cpp  ShortestRoutes-I.cpp  ShortestRoutes-II.cpp
CSES/5-RangeQueries/: DistinctValuesQueries.cpp  DynamicRangeMinimumQueries.cpp  DynamicRangeSumQueries.cpp  ForestQueries-II.cpp  ForestQueries.cpp  HotelQueries.cpp  IncreasingArrayQueries.cpp  ListRemovals.cpp  PizzeriaQueries.cpp  RangeUpdate.cpp  RangeXorQueries.cpp  SalaryQueries.cpp  StaticRangeMinimumQueries.cpp  StaticRangeSumQueries.cpp  SubarraySumQueries.cpp
CSES/6-TreeAlgorithms/: CompanyQueries-II.cpp  CompanyQueries.cpp  CountingPaths.cpp  DistanceQueries.cpp  DistinctColors.cpp  PathQueries-II.cpp  PathQueries.cpp  Subordinates.cpp  SubtreeQueries.cpp  TreeDiameter.cpp  TreeMatching.cpp  TressDistances-II.cpp
CSES/9-AdditionalProblems/: 20-BitInversions.cpp
CSES/9-Geometry/: ConvexHull.cpp  LineSegmentIntersection.cpp  MinimumEuclideanDistance.cpp  PointInPolygon.cpp  PointLocationTest.cpp  PolygonArea.cpp  PolygonLatticePoints.cpp
Proco/2021/: A-HappyXORSadXOR.cpp  B-DotsAndBoxes.cpp  D-HedgehogGrid.cpp  H-War.cpp  K-Marbles.cpp
TeamsCode/Spring 2021/: AirlineArrivals.cpp  BackyardBuilding.cpp  CompetitionConundrum.cpp  EruditionExcursion.cpp  LaneLights.cpp  LootLake.cpp  PalindromePairs.cpp  PracticingPoses.cpp  PrimePredicament.cpp  ScatterbrainedStudying.cpp  SocialSorting.cpp  TrickyTaxes.cpp  (+1 more)
USACO/: test.cpp
(+152 files in other folders)
